UIP-2400: Cert styling template
Change-Id: I6b02e6ab476aa561524ca83d6cf202476f3f15d5

--- a/packages/ui-library/src/css/forms/_file-input.scss
+++ b/packages/ui-library/src/css/forms/_file-input.scss
@@ -6,11 +6,12 @@
     text-align: left;
     font-size: 14px;
     line-height: 1em;
+    background-color: transparent;
     @include font-pn-regular;
     @include break-word;
 
     &.input-file--selected {
-        background-color: $color-white;
+        background-color: transparent;
     }
 
     &__selected-title {
