--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2346,7 +2346,7 @@ input[type=file] {
         input[type=password],
         textarea {
             cursor: text;
-            background-color: rgba($color-input-fill, 0.25);
+            background-color: transparent;
             border-color: $color-rabbit-fur;
 
             &:hover,
