UIP-2430 fixed font family in code view
Change-Id: Ifd98dfda35636b2811a78b10db85bae95306b8a8

--- a/packages/ui-library/src/css/code-view.scss
+++ b/packages/ui-library/src/css/code-view.scss
@@ -13,7 +13,7 @@
 }
 
 .code-view__font {
-    font-family: 'Consolas, Monaco', 'Andale Mono', monospace;
+    font-family: 'Consolas', 'Monaco', 'Andale Mono', monospace;
     font-size: 14px;
     white-space: pre;
     word-spacing: normal;
