--- a/packages/ui-library/src/css/layout/_messages.scss
+++ b/packages/ui-library/src/css/layout/_messages.scss
@@ -5,8 +5,12 @@
     left: $layout-nav-width;
     right: 0;
     color: $color-white;
+    align-items: flex-start;
+    @include flexbox-direction(column);
+    @include flexbox();
     padding: 0;
-    height: 0; // to keep the larger container from ever blocking clicks
+    height: 100%; // to keep the larger container from ever blocking clicks
+    pointer-events: none;
 
     &--sidebar-fix {
         // temporary class to fix Messages for the new sidebar
@@ -47,7 +51,7 @@
     }
     .message {
         @include flexbox();
-
+        pointer-events: auto;
         align-items: center;
         clear: both;
         position: relative;
@@ -57,7 +61,8 @@
         font-size: 14px;
         line-height: 1.3;
         margin: 0 auto;
-        min-width: 75%;
+        width: 100%;
+        box-sizing: border-box;
 
         @include animation(fade-in 0.7s);
 
@@ -83,6 +88,48 @@
                 margin-right: $spacing-md;
             }
         }
+
+        &--center {
+            flex: 0 0 170px auto;
+            width: auto;
+            min-width: auto;
+            margin: auto;
+            padding: $spacing-lg;
+            background: $color-accent-neutral-10;
+            @include border-radius(4px);
+            display: flex;
+            flex-direction: column;
+            transform: translate(-$layout-nav-width/2, -$layout-header-height);
+
+            @media (max-width: 600px) {
+                max-width: auto;
+                margin: 0;
+            }
+
+            .message__icon {
+                display: block;
+                width: 50px;
+                height: 50px;
+                border-radius: 17px;
+                line-height: 50px;
+                font-size: 50px;
+                margin-right: 0;
+                margin-bottom: $spacing-md;
+                background: transparent;
+            }
+
+            .message__title {
+                font-size: 18px;
+                margin-bottom: $spacing-md;
+                text-align: center;
+            }
+
+            .message__description {
+                font-size: 24px;
+                text-align: center;
+            }
+        }
+
         input[type=button] {
             $height: 24px;
 
