UIP-2425: Created attribute mapping view component
Change-Id: I347ae6afa00bd30927d0a50f43a1901b26d4b9e9

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -17,6 +17,8 @@
 @import 'layout/_list-nav.scss';
 @import 'layout/flex-row';
 @import 'layout/padding';
+@import 'layout/mapped-attributes';
+@import 'layout/chip';
 @import 'password-meter';
 @import 'templates/expandable-row-tooltip.scss';
 @import 'templates/section-columns';
