--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -63,7 +63,7 @@ a.icon-clear {
 .icon {
     @include inline-flex;
     &__graphic {
-        padding: 0 8px 0 0;
+        padding: 0 $spacing-sm 0 0;
         &--size-sm {
             font-size: 100%;
         }
