UIP-2120 : add InputRowAccessories to the InputRow to accomodate vertically centered text, buttons, etc next to a FormTextField
Change-Id: Id8c2381fc47d01a3bf867180b3e43fbdd2592da4

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2416,6 +2416,14 @@ input[type=file] {
         @include flexbox-direction(row);
         align-items: flex-end;
     }
+    &__accessories {
+        display: inline-block;
+        line-height: $default-input-height;
+
+        & > * {
+            vertical-align: middle;
+        }
+    }
 
     position: relative;
     margin: 0 0 25px;
