--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -52,6 +52,22 @@
 
         @include transform(translateX(-50%));
     }
+    .close-modal {
+        display: block;
+        position: absolute;
+        top: 13px;
+        right: 15px;
+        line-height: 1em;
+        color: transparent;
+        cursor: pointer;
+
+        &:after {
+            color: $color-rhino;
+            font-size: 18px;
+            content: '\78';
+            font-family: 'iconfont';
+        }
+    }
     .modal-header {
         position: relative;
         padding: 0 25px;
@@ -71,7 +87,6 @@
             color: $color-white;
             padding: 18px 0 0 18px;
         }
-        > .close-modal,
         > .details-tooltip {
             display: block;
             position: absolute;
@@ -80,17 +95,6 @@
             line-height: 1em;
             color: transparent;
         }
-        .close-modal {
-            cursor: pointer;
-
-            &:after {
-                color: $color-rhino;
-                font-size: 18px;
-                content: '\78';
-                font-family: 'iconfont';
-            }
-        }
-        .close-modal,
         .details-tooltip,
         .details-target {
             height: 18px;
@@ -163,9 +167,6 @@
         .modal-title {
             font-size: 20px;
             margin: 0 0 15px;
-        }
-        .modal-header {
-            display: none;
         }
         .modal-body {
             border-width: 0 1px 1px;
