UIP-2407 Dashboard Cards shouldn't grow beyond their container
Change-Id: Ic71cad3c0ce2d6c6fc331ee1aeb0c65be4ab1eb9

--- a/packages/ui-library/src/css/layout/_dashboard-cards.scss
+++ b/packages/ui-library/src/css/layout/_dashboard-cards.scss
@@ -43,6 +43,7 @@ $fullwidthBreakpoint: 950px;
     @include flexbox;
 
     position: relative;
+    max-width: 100%;
 
     > * {
         @include flexbox-grow(1);
