UIP-2433: Fix close button with close confirmation
Change-Id: I9d2a1c50ec7493661617d642479bfbfffe0bea66

--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -94,6 +94,11 @@
             right: 15px;
             line-height: 1em;
             color: transparent;
+
+            .close-modal {
+                top: 0;
+                right: 0;
+            }
         }
         .details-tooltip,
         .details-target {
