UIP-2151 : add basic email template
Change-Id: I1b65b9f5d9dd1c4ff68ab91f3bb34af0a07e3f44

--- a/packages/ui-library/src/demo/css/demos.scss
+++ b/packages/ui-library/src/demo/css/demos.scss
@@ -63,3 +63,14 @@ hr {
     border-width: 1px 0 0;
     border-color: $color-timberwolf;
 }
+
+.email-demo {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    height: 100%;
+
+    &__iframe {
+        height: 100%;
+    }
+}
