UIP-2424: Social login updates
Change-Id: I06a548d244930e3f74a839cb3b38f8eeaaef1d4b

--- a/packages/ui-library/src/css/layout/_chip.scss
+++ b/packages/ui-library/src/css/layout/_chip.scss
@@ -7,6 +7,10 @@
         background-color: $color-charting-cyan;
     }
 
+    &--color-faint-grey {
+        background-color: $color-strong-neutral-90;
+    }
+
     &--color-light-grey {
         background-color: $color-neutral-90;
     }
