UIP-2458: Colored indents
Change-Id: I57ed1e777ce24ec1aff7a13c554896fd52e10198

--- a/packages/ui-library/src/css/colors.scss
+++ b/packages/ui-library/src/css/colors.scss
@@ -49,6 +49,7 @@ $color-charting-magenta: #e12f51;
 $color-charting-orange: #ffa500;
 $color-charting-green: #447100;
 $color-charting-cyan: #77e6eb;
+$color-charting-grape: #6a3f89;
 
 // LEGACY COLOR NAMES
 $color-active: $color-active-blue;
