UIP-2461: Added monospaced option to FormTextArea
Change-Id: Ice2e4947f2424404f7ac1a0bf959fe8d85a00214

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -241,6 +241,14 @@ label {
             line-height: 1.2em;
             height: auto;
             width: 100%;
+
+            &.input-textarea {
+                &__input {
+                    &--monospaced {
+                        font-family: 'Consolas', 'Monaco', 'Andale Mono', monospace;
+                    }
+                }
+            }
         }
         &.extended {
             textarea {
