UIP-2468: Fix AutoWidth on column
Change-Id: I091e1a538af83300c98a69bc14f5d961dfc3ca1c

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -1005,7 +1005,7 @@ $color-grey-minor-1: $color-neutral-30;
     }
     &.columns-width-auto {
         .content-column {
-            flex: none;
+            flex: auto;
 
             @include flexbox-grow(0);
         }
