UIP-2480 custom domain templating
Change-Id: I63ae805e9123f70b5b152bd53d215d41c2bc3e51

--- a/packages/ui-library/src/css/forms/_file-input.scss
+++ b/packages/ui-library/src/css/forms/_file-input.scss
@@ -51,4 +51,14 @@
         border-top: 1px solid $color-strong-neutral-70;
         color: $color-strong-neutral-50;
     }
+
+    &__always-title {
+        padding-bottom: $spacing-md;
+        color: $color-elephant;
+        text-transform: uppercase;
+    }
+
+    &__always-title-container {
+        margin-left: $spacing-sm;
+    }
 }
