UIP-2472: Table changes and new icon for unlinking social accounts
Change-Id: Icab6c002a58ac73563573541aae36fd0878fde9d

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -683,6 +683,11 @@
     content: $icon-undo;
   }
 }
+.icon-unlink {
+  &:before {
+    content: $icon-unlink;
+  }
+}
 .icon-user {
   &:before {
     content: $icon-user;
