--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -4,7 +4,7 @@ $icomoon-font-family: "iconfont"; // KEEP - designates name of font
 $icon-account: "\61";
 $icon-admin-account: "\74";
 $icon-alert: "\21";
-$icon-alert-solid: "\e92d";
+$icon-alert-solid: "\e900";
 $icon-approve: "\70";
 $icon-apps: "\6c";
 $icon-as: "\e904";
@@ -132,6 +132,7 @@ $icon-terminal: "\e924";
 $icon-thumb: "\54";
 $icon-twitter: "\e92a";
 $icon-undo: "\6e";
+$icon-unlink: "\e92d";
 $icon-user: "\75";
 $icon-user_directory: "\e928";
 $icon-users: "\55";
