--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -191,6 +191,11 @@ table {
                 }
             }
         }
+        &--solid-lines {
+            td {
+                border-bottom: 1px solid $color-rabbit-fur;
+            }
+        }
         tr {
             &.expanded {
                 td,
