UIP-2492: Added text color to Chip component
Change-Id: Ia714647c71480fe78087165be0934599ca80e24e

--- a/packages/ui-library/src/css/layout/_chip.scss
+++ b/packages/ui-library/src/css/layout/_chip.scss
@@ -1,5 +1,6 @@
 .chip-component {
     border-radius: 3px;
+    color: $color-neutral-20;
     display: inline-block;
     padding: $spacing-xs $spacing-sm;
 
