UIP-2504: Added applications details column to End User Devices
Change-Id: I2917b7f69258570f60f46d76782ec4ddf727fd27

--- a/packages/ui-library/src/css/layout/_padding.scss
+++ b/packages/ui-library/src/css/layout/_padding.scss
@@ -86,4 +86,9 @@
             padding-top: $spacing-xl;
         }
     }
+
+    &--inline {
+        display: inline-block;
+        vertical-align: middle;
+    }
 }
