Fixed play icon
Change-Id: Ibff0ab0aa911a1727be93b328848dd6ef4daa765

--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -81,7 +81,7 @@ $icon-on-off: "\e910";
 $icon-org-chart: "\e915";
 $icon-overview: "\6f";
 $icon-pin: "\4e";
-$icon-play: "\e900";
+$icon-play: "\e90c";
 $icon-plus: "\2b";
 $icon-plus-rounded: "\2a";
 $icon-population: "\e923";
@@ -107,15 +107,15 @@ $icon-progress-6-4: "\e1";
 $icon-progress-6-5: "\e2";
 $icon-progress-6-6: "\e3";
 $icon-puzzle: "\7a";
-$icon-radar: "\e90c";
+$icon-radar: "\e90d";
 $icon-resend: "\72";
 $icon-resource: "\e922";
 $icon-right: "\3e";
 $icon-robot: "\e926";
 $icon-search: "\73";
-$icon-server: "\80";
+$icon-server: "\20ac";
 $icon-settings: "\53";
-$icon-shield: "\e90d";
+$icon-shield: "\e91b";
 $icon-slider: "\7e";
 $icon-sort-asc: "\41";
 $icon-sort-desc: "\2200";
@@ -127,14 +127,14 @@ $icon-spinner: "\50";
 $icon-success: "\79";
 $icon-success-round: "\e92e";
 $icon-support: "\71";
-$icon-tag: "\e91b";
-$icon-terminal: "\e924";
+$icon-tag: "\e924";
+$icon-terminal: "\e928";
 $icon-thumb: "\54";
 $icon-twitter: "\e92a";
 $icon-undo: "\6e";
 $icon-unlink: "\e92d";
 $icon-user: "\75";
-$icon-user_directory: "\e928";
+$icon-user_directory: "\e92f";
 $icon-users: "\55";
 $icon-view: "\56";
 $icon-view-hidden: "\2f";
