UIP-2484 fixed autofocus on load in modal
Change-Id: I203061f24a59d3be43660232b4f04afb577f59bb

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -24,8 +24,13 @@ $default-input-border-radius: 2px;
   but it will still show up on keyboard focus.
 */
 .js-focus-visible :focus:not(.focus-visible) {
-    outline: none;
+    outline-width: 0;
 }
+
+.js-focus-visible [class$='--autofocus']:focus:not(.focus-visible) {
+    outline-width: 5px;
+}
+
 
 
 // CORE INPUT STYLES ---------------------------------------------------------------------------------------------------
