UIP-2529 fixed hover state making the button bigger on tile button
Change-Id: I5f484e4c17e76f5d96469d8453ca696b4d739564

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -832,7 +832,7 @@ button.tile-button--side-icon {
             color: $color-active-blue;
 
             &:hover {
-                font-weight: 800;
+                text-shadow: 0 0 0.5px $color-active-blue;
                 border-color: $color-white;
                 box-shadow: 0 0 3px #0e4054;
             }
