UIP-2564: Added SAML icon
Change-Id: Ia654b4cdc7aa8567b353564a82173242acd36631

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -583,6 +583,11 @@
     content: $icon-robot;
   }
 }
+.icon-saml {
+  &:before {
+    content: $icon-saml;
+  }
+}
 .icon-search {
   &:before {
     content: $icon-search;
