--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -112,6 +112,7 @@ $icon-resend: "\72";
 $icon-resource: "\e922";
 $icon-right: "\3e";
 $icon-robot: "\e926";
+$icon-saml: "\e930";
 $icon-search: "\73";
 $icon-server: "\20ac";
 $icon-settings: "\53";
