UIP-2581 Cleaned up the ellipsis animation
Change-Id: I0b60ac243276af671abf378809e10b3a5c7d4134

--- a/packages/ui-library/src/css/loader.scss
+++ b/packages/ui-library/src/css/loader.scss
@@ -215,26 +215,41 @@
         0% {
             opacity: 0;
         }
-        40% {
+        30% {
             opacity: 1;
+        }
+        60% {
+            opacity: 0;
         }
     }
 
     @include keyframes(pulse-2) {
+        0% {
+            opacity: 0;
+        }
         20% {
             opacity: 0;
         }
-        60% {
+        50% {
             opacity: 1;
+        }
+        80% {
+            opacity: 0;
         }
     }
 
     @include keyframes(pulse-3) {
+        0% {
+            opacity: 0;
+        }
         40% {
             opacity: 0;
         }
-        80% {
+        70% {
             opacity: 1;
+        }
+        100% {
+            opacity: 0;
         }
     }
     &.ie9 {
