--- a/packages/ui-library/src/css/forms/_file-input.scss
+++ b/packages/ui-library/src/css/forms/_file-input.scss
@@ -14,6 +14,12 @@
         background-color: transparent;
     }
 
+    &__container {
+        display: flex;
+        align-items: center;
+    }
+
+
     &__field-set {
         display: inline-flex;
         &--focused {
