UIP-2586 fixed rocker button border-radius
Change-Id: Icfca63807a57e19c41f92ee8d28d36080f9a3b24

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -408,6 +408,7 @@ button,
         border-style: solid;
         border-color: $color-rhino;
         border-width: 1px 0 1px 1px;
+        border-radius: 0;
 
         cursor: pointer;
     }
