--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -50,6 +50,7 @@ $layout-nav-width-offset: 15px;
     background-repeat: no-repeat;
     background-size: contain;
     height: 21px;
+    margin-top: 5px;
     width: 95px;
 }
 
