UIP-2572 OIDC Access token template UIP-2599 Remove Child Padding from TabSet
Change-Id: I70d9ae1ee8e3566c466dbfdf106d5a37f3f48052

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -827,6 +827,7 @@ $color-grey-minor-1: $color-neutral-30;
 
     &.page-section-title-nounderline {
         border-bottom: 0;
+        padding: 0;
     }
 }
 
@@ -974,9 +975,6 @@ $color-grey-minor-1: $color-neutral-30;
     }
 }
 
-.tab-set-children {
-    padding-left: $spacing-lg;
-}
 
 .content-columns {
     @include flexbox;
