UIP-2578: Fixed mobile DeviceIcon to have correct hover color in End User Devices
Change-Id: I95f381902d04e5ed8395eadceac6bbe478ad1bd2

--- a/packages/ui-library/src/css/end-user/_device-icon.scss
+++ b/packages/ui-library/src/css/end-user/_device-icon.scss
@@ -12,4 +12,30 @@
         text-transform: uppercase;
         color: $color-active-blue;
     }
+
+    &__icon {
+        &--mobile {
+            rect {
+                stroke: $color-strong-neutral-10;
+            }
+            path {
+                fill: $color-strong-neutral-10;
+            }
+        }
+    }
+}
+
+.tile-button {
+    &:hover {
+        .device-icon__icon {
+            &--mobile {
+                rect {
+                    stroke: $color-active-blue;
+                }
+                path {
+                    fill: $color-active-blue;
+                }
+            }
+        }
+    }
 }
